<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<!-- Wrapping the layout into /layout to make it available with data binding. -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
         the whole ViewModel, so that we can access the LiveData,
         click handlers, and state variables. -->

    <data>

        <variable
            name="taskViewModel"
            type="com.example.android.navigation.mainTasksPage.MainTasksPageFragmentViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="681dp"
        android:background="#ECE5FA"
        android:orientation="horizontal">

        <!-- Simplest way of displaying scrollable text and data. There is a
             better and more efficient way to do this, and you will learn about
             RecyclerView in a later lesson. -->

        <!-- With data binding and LiveData, we can track the buttons' visibility states
             from the ViewModel. The click handler is in the ViewModel as well, and
             you can set it for the Views using this lambda pattern. -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input"
                android:layout_width="375dp"
                android:layout_height="93dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:background="#DDD5F6"
                    android:hint="@string/task_input_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/showAllTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#654985"
                    android:foregroundTint="#F4E3E3"
                    android:text="Show all tasks"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/FilterByImportance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="#654985"
                    android:text="Filter By Importance"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/addTask"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#654985"
                    android:text="Confirm Task"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/removeAllTasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#654985"
                    android:text="Remove all"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/archived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#654985"
                    android:text="Archived"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskList"
                android:layout_width="398dp"
                android:layout_height="271dp"
                android:background="#DDD5F6"
                android:foregroundTint="#9491DF"
                tools:listitem="@layout/fragment_main_tasks_page_list_item" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>
</layout>