<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.MainActivity"
    android:name="com.example.android.navigation.IndividualTaskPageFragment">

    <data>

        <variable
            name="individualTaskViewModel"
            type="com.example.android.navigation.individualTaskPage.IndividualTaskPageViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animationCache="true"
        android:background="#DDD5F6">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="101dp"
            android:layout_height="121dp"
            android:layout_marginStart="80dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="173dp"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="418dp"
            android:layout_height="366dp"
            android:layout_marginTop="225dp"
            android:layout_marginEnd="108dp"
            android:layout_marginBottom="226dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/importance_level_button"
                    android:layout_width="411dp"
                    android:layout_height="48dp"
                    android:background="#654985"
                    android:text="Add Importance Level"
                    android:textColor="#FFFFFF" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/light"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="#FFEB3B"
                        android:text="light"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/normal"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="#4CAF50"
                        android:text="normal"
                        android:visibility="invisible" />

                    <Button
                        android:id="@+id/important"
                        android:layout_width="143dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="#F44336"
                        android:text="important"
                        android:visibility="invisible" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="496dp"
                android:layout_height="20dp"
                android:orientation="vertical">

            </LinearLayout>

            <Button
                android:id="@+id/addDate"
                android:layout_width="404dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#654985"
                android:text="Add Due Date or Start Date"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

            <LinearLayout
                android:layout_width="398dp"
                android:layout_height="37dp"
                android:background="@color/colorAccent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/displayDate"
                    android:layout_width="399dp"
                    android:layout_height="match_parent"
                    android:background="#654985"
                    android:backgroundTint="#654985"
                    android:hint="Task due date  :"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textSize="30dp" />
            </LinearLayout>

            <Button
                android:id="@+id/remove"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="405dp"
                android:layout_height="79dp"
                android:backgroundTint="#654985"
                android:text="Remove Task"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="411dp"
            android:layout_height="72dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="87dp"
            android:layout_marginBottom="69dp"
            android:background="#654985"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="366dp"
                android:layout_height="72dp"
                android:background="#654985"
                android:text="@{individualTaskViewModel.text}"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>